# aftershoot-assignment

./: .gitignore  README.md
client/: Cargo.toml  abc.rs
client/src/: main.rs
server/: Cargo.toml  Rocket.toml  metadata.db
server/src/: db.rs  errors.rs  main.rs  metadata_extractor.rs  server.rs
