[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version= "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"
image = "0.24.3"
serde_with = "2.0.0"
