[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
rand = "0.6"
kamadak-exif = "0.5.4"
base64 = "0.13.0"
image = "0.24.3"



[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

